# directogallery

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.svelte  stores.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/models/: gallery.rs
src-tauri/src/models/gallery/: gallery_dir.rs
src/components/: BackToTop.svelte  ChooseRoot.svelte  GalleryContent.svelte  Header.svelte  ImageViewer.svelte  ScalingCursor.svelte
