[package]
name = "directogallery"
version = "1.0.0"
description = "Directogallery is a small app designed to view a directory as a gallery to make it easier to browse images."
authors = ["Picorims"]
license = "GPL-3.0-or-later"
repository = "https://github.com/Picorims/directogallery"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
